// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  label="Toggle filter"
  onClick={[MockFunction]}
  role="search"
/>
`;

exports[`Filter should render filter input with default placeholder and remove cross 1`] = `
<form
  className="theme-filter theme-navbar"
  onSubmit={[Function]}
  role="search"
>
  <div
    className="form-group theme-animate"
  >
    <Icon
      className="theme-search-icon"
      name="talend-search"
    />
    <FilterInput
      autoFocus={true}
      dockable={true}
      onBlur={[Function]}
      onClear={[Function]}
      onFilter={[Function]}
      onFocus={[Function]}
      placeholder="Filter"
      t={[Function]}
      value="search string"
    />
    <Action
      bsStyle="link"
      className="theme-remove"
      hideLabel={true}
      icon="talend-cross"
      label="Remove filter"
      onMouseDown={[Function]}
    />
  </div>
</form>
`;

exports[`Filter should render filter input with given placeholder without remove cross 1`] = `
<form
  className="theme-filter theme-navbar"
  onSubmit={[Function]}
  role="search"
>
  <div
    className="form-group theme-animate"
  >
    <Icon
      className="theme-search-icon"
      name="talend-search"
    />
    <FilterInput
      autoFocus={true}
      dockable={true}
      onBlur={[Function]}
      onClear={[Function]}
      onFilter={[Function]}
      onFocus={[Function]}
      placeholder="find something"
      t={[Function]}
    />
  </div>
</form>
`;

exports[`Filter should render highlighted filter 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  label="Toggle filter"
  onClick={[MockFunction]}
  role="search"
/>
`;

exports[`Filter should render id if provided 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  id="toolbar-filter"
  label="Toggle filter"
  onClick={[MockFunction]}
  role="search"
/>
`;

exports[`Filter should render only toggle icon 1`] = `
<Action
  bsStyle="link"
  className=""
  hideLabel={true}
  icon="talend-search"
  label="Toggle filter"
  onClick={[MockFunction]}
  role="search"
/>
`;
